# samples

./: README.md  setup.py
.devcontainer/: devcontainer.json
src/c7g.devenv/: README.md
src/ctransformers/: CMakeLists.txt  dev.ipynb  kor.ipynb
src/ctransformers/models/llms/: starcoder.cc
src/ggml/: CMakeLists.txt
